# OPCPP

asteroids-martinmatijevic/src/: Entity.cpp  GameOver.cpp  Lives.cpp  MainMenu.cpp
asterstate-martinmatijevic/: README.md
asterstate-martinmatijevic/src/: Animation.cpp  Asteriod.cpp  Asteriod.h  Entity.h  ExplosionEffect.cpp  ExplosionEffect.h  Lives.h  MainMenu.h  Score.cpp  SoundEffectManager.h  Spaceship.h  WinScreen.cpp  gamestate.cpp  playstate.cpp  playstate.h
cmake-martinmatijevic/: .gitmodules  README.md
cmake-martinmatijevic/ex1/: CMakeLists.txt
cmake-martinmatijevic/ex2/: CMakeLists.txt
cmake-martinmatijevic/ex2/src/: CMakeLists.txt
cmake-martinmatijevic/ex3/: CMakeLists.txt
cmake-martinmatijevic/ex3/src/: CMakeLists.txt
cmake-martinmatijevic/ex5/: CMakeLists.txt
cmake-martinmatijevic/ex5/test/: CMakeLists.txt  test.cpp
compositvisit-martinmatijevic/: CMakeLists.txt  README.md
compositvisit-martinmatijevic/data/: tekst.txt  text1.txt  text2.txt
compositvisit-martinmatijevic/doc/: composite.uxf
compositvisit-martinmatijevic/src/: CMakeLists.txt  composite.cpp  composite.h  main.cpp
compositvisit-martinmatijevic/test/: CMakeLists.txt  tests.cpp
git-martinmatijevic/: README.md  main.cpp
polish-martinmatijevic/: CMakeLists.txt  README.md  aet-1.fig  evaluate_postfix.cpp  evaluate_postfix.h  evaluate_prefix.cpp  evaluate_prefix.h  main.cpp
polish-martinmatijevic/test/: CMakeLists.txt  test.cpp
proba/: main.cpp
sequential-martinmatijevic/: CMakeLists.txt  README.md  main.cpp  sequential.cpp  sequential.h
sequential-martinmatijevic/test/: CMakeLists.txt  tests.cpp
string2-martinmatijevic/: CMakeLists.txt  README.md
string2-martinmatijevic/include/: strutils.h
string2-martinmatijevic/src/: main.cpp  strutils.cpp
string2-martinmatijevic/test/: CMakeLists.txt  tests.cpp
vj-sfml1-martinmatijevic/: CMakeLists.txt  README.md
vj-sfml1-martinmatijevic/src/: CMakeLists.txt  game.cpp  game.h  main.cpp
vj-sfml2-martinmatijevic/: CMakeLists.txt
vj-sfml2-martinmatijevic/src/: Bullet.cpp  Bullet.h  CMakeLists.txt  GameOver.h  GameState.h  MainGame.cpp  MainGame.h  MainMenu.cpp  Rock.cpp  Rock.h  Score.h  SoundEffectManager.cpp  Spaceship.cpp  WinScreen.h
